@startuml

title __CREATION's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.creation {
            class com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment {
                - GALLERY_IMAGE_CODE : int
                - TAKE_IMAGE_CODE : int
                - defaultMessage : String
                - groupID : String
                - groupVisibility : int
                + onActivityResult()
                + onClick()
                + onCreateView()
                + onDestroyView()
                + onItemClick()
                + showFailureAlert()
                ~ saveGroupImageDB()
                - setList()
                - showMediaDialog()
            }
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.creation {
            class com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationViewModel {
                + SendInvite()
                + createGroupDB()
                + getFriends()
                + getUser()
                + getUserName()
                + shakeError()
            }
          }
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment .up.|> android.view.View.OnClickListener
  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment .up.|> com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment o-- com.pis.buy2gether.databinding.FragmentGroupCreationBinding : binding
  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment o-- com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter : friendListAdapter
  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment o-- com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationViewModel : groupCreationViewModel
  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
